--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,9 +1,3 @@
-
-ion-fab-button {
-  --background: #45ff2f !important;
-  --color: black
-}
-
 #map-wrapper {
   position: absolute;
   top: 0;
@@ -88,13 +82,6 @@ ion-item#cancel {
 
 
 
-.map-color {
-  background-color: #aaffaa !important;
-  color: black;
-  ion-icon {
-    color: black
-  }
-}
 
 .reddish-color {
   background-color: #ffaaaa !important;
@@ -104,7 +91,7 @@ ion-item#cancel {
   }
 }
 
-
+/*
 .record-button:disabled {
   opacity: 0.3;
 }
@@ -112,7 +99,7 @@ ion-item#cancel {
 .record-button:active {
   transform: scale(0.95);
 }
-
+*/
 ion-row {
   display: flex;
   justify-content: center;
