--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -1,232 +1,3 @@
-<!--
-<ion-content class="custom-content">
-
-<swiper-container id="data" pagination="true">
-
-  <!-- Slide 1: Current track 
-  <swiper-slide>
-
-    <div class='empty'></div>
-
-    <div class='elementData card' [hidden]="!present.currentTrack || present.currentTrack.features[0].geometry.coordinates.length < 2">
-      @if (present.currentTrack) {
-        <table>
-<!--          <tr [ngClass]="audio.status"> 
-          <tr>
-            <td colspan="2">{{ 'CANVAS.CURTITLE' | translate }}</td>
-          </tr>
-          <tr>
-            <td>{{ 'CANVAS.DISTANCE' | translate }}</td>
-            <td>{{ present.currentTrack.features[0].properties.totalDistance | number: '1.3' }} km</td>
-          </tr>
-          <tr>
-            <td>{{ 'CANVAS.EGAIN' | translate }}</td>
-            <td>{{ present.currentTrack.features[0].properties.totalElevationGain | number: '1.0-0' }} m</td>
-          </tr>
-          <tr>
-            <td>{{ 'CANVAS.ELOSS' | translate }}</td>
-            <td>{{ present.currentTrack.features[0].properties.totalElevationLoss | number: '1.0-0' }} m</td>
-          </tr>
-          <tr>
-            <td>{{ 'CANVAS.TIME' | translate }}</td>
-            <td>{{ present.currentTrack.features[0].properties.totalTime }}</td>
-          </tr>
-          <tr>
-            <td>{{ 'CANVAS.MOTIONTIME' | translate }}</td>
-            <td>{{ currentMotionTime }}</td>
-          </tr>
-          <tr>
-            <td>{{ 'CANVAS.POINTS' | translate }}</td>
-            <td>{{ present.currentTrack.features[0].properties.totalNumber }}</td>
-          </tr>
-          <tr>
-            <td>{{ 'CANVAS.ALTITUDE' | translate }}</td>
-            @if (present.currentTrack.features[0].properties.currentAltitude !== undefined) {
-              <td>{{ present.currentTrack.features[0].properties.currentAltitude | number: '1.0-0' }} m</td>
-            }
-          </tr>
-          <tr>
-            <td>{{ 'CANVAS.SPEED' | translate }}</td>
-            <td>
-              @if (present.currentTrack.features[0].properties.currentAltitude !== undefined) {
-                <div>{{ present.currentTrack.features[0].properties.currentSpeed | number: '1.1-1' }} km/h</div>
-              }
-            </td>
-          </tr>
-          <tr>
-            <td>{{ 'CANVAS.AVGSPEED' | translate }}</td>
-            <td>
-              @if (currentAverageSpeed !== undefined) {
-                <div>{{ currentAverageSpeed | number: '1.1-1' }} km/h</div>
-              }
-            </td>
-          </tr>
-          <tr>
-            <td>{{ 'CANVAS.MOTIONAVGSPEED' | translate }}</td>
-            <td>
-              @if (currentMotionSpeed !== undefined) {
-                <div>{{ currentMotionSpeed | number: '1.1-1' }} km/h</div>
-              }
-            </td>
-          </tr>
-          <!--
-          @if (audio.status == 'green' && reference.archivedTrack && location.currentPoint) {
-            <tr>
-              <td>{{ 'CANVAS.FROM_START' | translate }}</td>
-              <td>
-                <div>{{ reference.archivedTrack.features[0].geometry.properties.data[location.currentPoint].distance | number: '1.3' }} km</div>
-              </td>
-            </tr>
-            <tr>
-              <td>{{ 'CANVAS.TO_END' | translate }}</td>
-              <td>
-                <div>{{ reference.archivedTrack.features[0].properties.totalDistance - reference.archivedTrack.features[0].geometry.properties.data[location.currentPoint].distance | number: '1.3' }} km</div>
-              </td>
-            </tr>
-          }
-            
-        </table>
-      }
-    </div>
-
-    <div class='elementCanvas' id='cc0' [hidden]="!present.currentTrack || present.currentTrack.features[0].geometry.coordinates.length < 2">
-      <h1 class='title'>{{'CANVAS.CANVASALTITUDE' | translate}}</h1>
-      <canvas class='canvas' id="currCanvas0" [attr.width]="canvasNum" [attr.height]="canvasNum"></canvas>
-    </div>
-
-    <div class='elementCanvas' id='cc1' [hidden]="!present.currentTrack || present.currentTrack.features[0].geometry.coordinates.length < 2">
-      <h1 class='title'>{{'CANVAS.CANVASSPEED' | translate}} ({{currentUnit}})</h1>
-      <canvas class='canvas' id="currCanvas1" [attr.width]="canvasNum" [attr.height]="canvasNum"></canvas>
-    </div>
-
-    <div class='empty'></div>
-    <div class='empty'></div>
-
-  </swiper-slide>
-
-  <!-- Slide 2: Archived track 
-  <swiper-slide>
-
-    <div class='empty'></div>
-
-    <div id="exportArea">
-      <div class='elementData card' [hidden]="!reference.archivedTrack">
-        @if (reference.archivedTrack) {
-          <table>
-            <tr>
-              <td colspan='2'>{{'CANVAS.ARCTITLE' | translate}}</td>
-            </tr>
-            <tr>
-              <td colspan='2'>{{reference.archivedTrack.features[0].properties.name}}</td>
-            </tr>
-            <tr>
-              <td>{{'CANVAS.DISTANCE' | translate}}</td>
-              @if (reference.archivedTrack.features[0].properties.totalDistance > -1) {
-                <td>
-                  {{ reference.archivedTrack.features[0].properties.totalDistance | number:'1.3' }} km
-                </td>
-              }
-            </tr>
-            <tr>
-              <td>{{ 'CANVAS.EGAIN' | translate }}</td>
-              @if (reference.archivedTrack.features[0].properties.totalElevationGain > -1) {
-                <td>
-                  {{ reference.archivedTrack.features[0].properties.totalElevationGain | number:'1.0-0' }} m
-                </td>
-              }
-            </tr>
-            <tr>
-              <td>{{ 'CANVAS.ELOSS' | translate }}</td>
-              @if (reference.archivedTrack.features[0].properties.totalElevationLoss > -1) {
-                <td>
-                  {{ reference.archivedTrack.features[0].properties.totalElevationLoss | number:'1.0-0' }} m
-                </td>
-              }
-            </tr>
-            <tr>
-              <td>{{ 'CANVAS.TIME' | translate }}</td>
-              @if (reference.archivedTrack.features[0].properties.totalTime !== undefined) {
-                <td>
-                  {{ reference.archivedTrack.features[0].properties.totalTime }}
-                </td>
-              }
-            </tr>
-            <tr>
-              <td>{{'CANVAS.POINTS' | translate}}</td>
-              <td>{{reference.archivedTrack.features[0].properties.totalNumber}}</td>
-            </tr>
-          </table>
-        }
-      </div>
-
-      <div class='elementCanvas' id='ac0' [hidden]="!reference.archivedTrack">
-        <h1 class='title'>{{'CANVAS.CANVASALTITUDE' | translate}}</h1>
-        <canvas class='canvas' id="archCanvas0" [attr.width]="canvasNum" [attr.height]="canvasNum"></canvas>
-      </div>
-    </div>
-
-    <div class='elementCanvas' id='ac1' [hidden]="!reference.archivedTrack">
-      <h1 class='title'>{{'CANVAS.CANVASSPEED' | translate}} ({{archivedUnit}})</h1>
-      <canvas class='canvas' id="archCanvas1" [attr.width]="canvasNum" [attr.height]="canvasNum"></canvas>
-    </div>
-
-    <div class='empty'></div>
-    <div class='empty'></div>
-
-  </swiper-slide>
-
-  <!-- Slide 3: Archived track-2
-
-  <swiper-slide>
-    <div class='empty'></div>
-    <div class='elementData card' [hidden]="!reference.archivedTrack">
-      @if (reference.archivedTrack) {
-        <table class="partials">
-          <tr>
-            <td colspan='3'>{{'CANVAS.ARCTITLE' | translate}}</td>
-          </tr>
-          <tr>
-            <td colspan='3'>
-                {{reference.archivedTrack.features[0].properties.name}}
-            </td>
-          </tr>
-          @for (ps of partialSpeeds; track i; let i = $index) {
-            <tr>
-              <td>{{ ps[0] }}</td>
-              <td>{{ ps[1] }}</td>
-              <td>{{ ps[2] | number:'1.2-2' }} km/h</td>
-            </tr>
-          }
-        </table>
-      }
-    </div>
-  </swiper-slide>
-
-</swiper-container>
-
-</ion-content>
-
-<!-- space for android controls 
-<div class="bottom-safe-gray"></div>
-
-<ion-fab slot="fixed" horizontal="center" vertical="bottom" class="bottom-safe">
-  <ion-row>
-    <div class="record-button canvas-color" (click)="fs.gotoPage('tab1')">
-      <ion-icon name="earth-sharp"></ion-icon>
-      <span>{{ 'MAP.MAP_BUTTON' | translate }}</span>
-    </div>
-    <div class="record-button canvas-color" (click)="fs.gotoPage('archive')">
-      <ion-icon name="list-sharp"></ion-icon>
-      <span>{{ 'MAP.ARCHIVE_BUTTON' | translate }}</span>
-    </div>
-    <div class="record-button canvas-color" (click)="fs.gotoPage('settings')">
-      <ion-icon name="settings-sharp"></ion-icon>
-      <span>{{ 'MAP.SETTINGS_BUTTON' | translate }}</span>
-    </div>
-  </ion-row>
-</ion-fab>
--->
-
 
 <ion-content class="custom-content">
   <swiper-container id="data" pagination="true">
@@ -253,11 +24,11 @@
               </tr>
               <tr>
                 <td>{{ 'CANVAS.TIME' | translate }}</td>
-                <td>{{ present.currentTrack.features[0].properties.totalTime }}</td>
+                <td>{{ formatMsec(present.currentTrack.features[0].properties.totalTime) }}</td>
               </tr>
               <tr>
                 <td>{{ 'CANVAS.MOTIONTIME' | translate }}</td>
-                <td>{{ currentMotionTime }}</td>
+                <td>{{ formatMsec(present.currentTrack.features[0].properties.inMotion) }}</td>
               </tr>
               <tr>
                 <td>{{ 'CANVAS.POINTS' | translate }}</td>
@@ -271,18 +42,26 @@
                 <td>{{ 'CANVAS.SPEED' | translate }}</td>
                 <td>{{ present.currentTrack.features[0].properties.currentSpeed | number: '1.1-1' }} km/h</td>
               </tr>
+              <tr>
+                <td>{{ 'CANVAS.AVGSPEED' | translate }}</td>
+                <td>{{ fs.averageSpeed | number: '1.1-1' }} km/h</td>
+              </tr>
+              <tr>
+                <td>{{ 'CANVAS.MOTIONAVGSPEED' | translate }}</td>
+                <td>{{ fs.averageMotionSpeed | number: '1.1-1' }} km/h</td>
+              </tr>
             </table>
           }
         </div>
 
         <div class='elementCanvas' id='cc0' [hidden]="!present.currentTrack || present.currentTrack.features[0].geometry.coordinates.length < 2">
           <h1 class='title'>{{'CANVAS.CANVASALTITUDE' | translate}}</h1>
-          <canvas class='canvas' id="currCanvas0" [attr.width]="canvasNum" [attr.height]="canvasNum"></canvas>
+          <canvas class='canvas' id="currCanvas0" [attr.width]="canvasSize" [attr.height]="canvasSize"></canvas>
         </div>
 
         <div class='elementCanvas' id='cc1' [hidden]="!present.currentTrack || present.currentTrack.features[0].geometry.coordinates.length < 2">
           <h1 class='title'>{{'CANVAS.CANVASSPEED' | translate}} ({{currentUnit}})</h1>
-          <canvas class='canvas' id="currCanvas1" [attr.width]="canvasNum" [attr.height]="canvasNum"></canvas>
+          <canvas class='canvas' id="currCanvas1" [attr.width]="canvasSize" [attr.height]="canvasSize"></canvas>
         </div>
         <div class='empty'></div>
       </div>
@@ -311,7 +90,7 @@
                 </tr>
                 <tr>
                   <td>{{ 'CANVAS.TIME' | translate }}</td>
-                  <td>{{ reference.archivedTrack.features[0].properties.totalTime }}</td>
+                  <td>{{ formatMsec(reference.archivedTrack.features[0].properties.totalTime) }}</td>
                 </tr>
                 <tr>
                   <td>{{'CANVAS.POINTS' | translate}}</td>
@@ -322,12 +101,12 @@
           </div>
           <div class='elementCanvas' id='ac0' [hidden]="!reference.archivedTrack">
             <h1 class='title'>{{'CANVAS.CANVASALTITUDE' | translate}}</h1>
-            <canvas class='canvas' id="archCanvas0" [attr.width]="canvasNum" [attr.height]="canvasNum"></canvas>
+            <canvas class='canvas' id="archCanvas0" [attr.width]="canvasSize" [attr.height]="canvasSize"></canvas>
           </div>
         </div>
         <div class='elementCanvas' id='ac1' [hidden]="!reference.archivedTrack">
           <h1 class='title'>{{'CANVAS.CANVASSPEED' | translate}} ({{archivedUnit}})</h1>
-          <canvas class='canvas' id="archCanvas1" [attr.width]="canvasNum" [attr.height]="canvasNum"></canvas>
+          <canvas class='canvas' id="archCanvas1" [attr.width]="canvasSize" [attr.height]="canvasSize"></canvas>
         </div>
         <div class='empty'></div>
       </div>
